--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@dipakparmar/docusaurus-plugin-umami": "^2.0.5",
     "@docusaurus/core": "2.3.0",
     "@docusaurus/preset-classic": "2.3.0",
     "@mdx-js/react": "^1.6.22",
