--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "@algolia/client-search": ">= 4.9.1 < 6",
     "@dipakparmar/docusaurus-plugin-umami": "^2.0.5",
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "esp-web-tools": "^9.2.0",
@@ -27,9 +27,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1",
-    "@docusaurus/theme-classic": "^2.3.1",
-    "@docusaurus/types": "^2.3.1",
+    "@docusaurus/module-type-aliases": "^2.4.0",
+    "@docusaurus/theme-classic": "^2.4.0",
+    "@docusaurus/types": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "@types/node": "^18.11.18",
     "typescript": "^4.7.4"
